tests/snapshots/snapshot_tests__flat_route_bell_lap.snap
---
source: tests/snapshot_tests.rs
expression: "serde_yaml::to_value(&[(\"route_name\", name),\n(\"distance_km\", &route.distance_km.to_string()),\n(\"elevation_m\", &route.elevation_m.to_string()),\n(\"cat_d_minutes\", &format!(\"{:.1}\", cat_d_duration)),\n(\"cat_c_minutes\", &format!(\"{:.1}\", cat_c_duration)),\n(\"cat_b_minutes\", &format!(\"{:.1}\", cat_b_duration)),\n(\"cat_a_minutes\", &format!(\"{:.1}\", cat_a_duration)),]).unwrap()"
---
- - route_name
  - Bell Lap
- - distance_km
  - "14.1"
- - elevation_m
  - "59"
- - cat_d_minutes
  - "29.4"
- - cat_c_minutes
  - "26.8"
- - cat_b_minutes
  - "24.5"
- - cat_a_minutes
  - "22.6"
