tests/snapshots/snapshot_tests__flat_route_downtown_dolphin.snap
---
source: tests/snapshot_tests.rs
expression: "serde_yaml::to_value(&[(\"route_name\", name),\n(\"distance_km\", &route.distance_km.to_string()),\n(\"elevation_m\", &route.elevation_m.to_string()),\n(\"cat_d_minutes\", &format!(\"{:.1}\", cat_d_duration)),\n(\"cat_c_minutes\", &format!(\"{:.1}\", cat_c_duration)),\n(\"cat_b_minutes\", &format!(\"{:.1}\", cat_b_duration)),\n(\"cat_a_minutes\", &format!(\"{:.1}\", cat_a_duration)),]).unwrap()"
---
- - route_name
  - Downtown Dolphin
- - distance_km
  - "22.9"
- - elevation_m
  - "80"
- - cat_d_minutes
  - "47.5"
- - cat_c_minutes
  - "43.1"
- - cat_b_minutes
  - "39.5"
- - cat_a_minutes
  - "36.5"
