tests/snapshots/snapshot_tests__hilly_route_eracing_course.snap
---
source: tests/snapshot_tests.rs
expression: "serde_yaml::to_value(&[(\"route_name\", name),\n(\"distance_km\", &route.distance_km.to_string()),\n(\"elevation_m\", &route.elevation_m.to_string()),\n(\"cat_d_minutes\", &format!(\"{:.1}\", cat_d_duration)),\n(\"cat_c_minutes\", &format!(\"{:.1}\", cat_c_duration)),\n(\"cat_b_minutes\", &format!(\"{:.1}\", cat_b_duration)),\n(\"cat_a_minutes\", &format!(\"{:.1}\", cat_a_duration)),]).unwrap()"
---
- - route_name
  - eRacing Course
- - distance_km
  - "27.4"
- - elevation_m
  - "223"
- - cat_d_minutes
  - "59.7"
- - cat_c_minutes
  - "54.2"
- - cat_b_minutes
  - "49.7"
- - cat_a_minutes
  - "45.9"
