tests/snapshots/snapshot_tests__mountain_route_mt._fuji.snap
---
source: tests/snapshot_tests.rs
expression: "serde_yaml::to_value(&[(\"route_name\", name),\n(\"distance_km\", &route.distance_km.to_string()),\n(\"elevation_m\", &route.elevation_m.to_string()),\n(\"cat_d_minutes\", &format!(\"{:.1}\", cat_d_duration)),\n(\"cat_c_minutes\", &format!(\"{:.1}\", cat_c_duration)),\n(\"cat_b_minutes\", &format!(\"{:.1}\", cat_b_duration)),\n(\"cat_a_minutes\", &format!(\"{:.1}\", cat_a_duration)),]).unwrap()"
---
- - route_name
  - Mt. Fuji
- - distance_km
  - "20.3"
- - elevation_m
  - "1159"
- - cat_d_minutes
  - "58.0"
- - cat_c_minutes
  - "52.7"
- - cat_b_minutes
  - "48.3"
- - cat_a_minutes
  - "44.6"
