tests/snapshots/snapshot_tests__short_crit_race_durations.snap
---
source: tests/snapshot_tests.rs
expression: "serde_yaml::to_value(&serde_yaml::to_value(&[(\"route_name\",\nserde_yaml::Value::String(\"Glasgow Crit Circuit\".to_string())),\n(\"distance_km\", serde_yaml::Value::String(\"3.0\".to_string())),\n(\"elevation_m\", serde_yaml::Value::String(\"34\".to_string())),\n(\"durations\",\nserde_yaml::Value::Sequence(durations.into_iter().map(|(cat, dur)|\nserde_yaml::to_value(&[(\"category\", cat),\n(\"minutes\",\n&format!(\"{:.1}\", dur))]).unwrap()).collect())),]).unwrap()).unwrap()"
---
- - route_name
  - Glasgow Crit Circuit
- - distance_km
  - "3.0"
- - elevation_m
  - "34"
- - durations
  - - - - category
        - cat_d
      - - minutes
        - "6.8"
    - - - category
        - cat_c
      - - minutes
        - "6.2"
    - - - category
        - cat_b
      - - minutes
        - "5.6"
    - - - category
        - cat_a
      - - minutes
        - "5.2"
